--- a/css/styles.css
+++ b/css/styles.css
@@ -30,6 +30,8 @@ body {
     background-color: var(--primary-background-color);
     font-family: 'Roboto', sans-serif;
     letter-spacing: 0.03em;
+    /* padding-top: 80px; */
+
 }
 
 .container{
@@ -50,6 +52,10 @@ header .container{
 header{
     background-color: #FFFFFF;
     outline: #ECECEC solid 1px;
+    /* position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%; */
     
 }
 header .logo {
@@ -134,11 +140,6 @@ header .logo {
     align-items: center;
     
 }
-
-
-
-
-
 
 .contacts  .contacts-item{
     margin-left: 50px;
@@ -413,8 +414,40 @@ display: flex;
     	    fill: currentColor;
     	}
 
+        /* bavkdrop */
 
-/* footer */
+.backdrop{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.1);
+}
+.backdrop.is-hidden{
+    opacity: 0;
+    pointer-events: none;
+}
+.modal{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 528px;
+    min-height: 581px;
+    background-color: rgba(255, 255, 255, 1);
+   
+}
+.btn-modal{
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    margin: 8px 8px;
+   
+}
+
+
+        /* footer */
 footer {
     background-color: #2F303A;
     padding-top: 60px;
