--- a/css/styles.css
+++ b/css/styles.css
@@ -414,7 +414,7 @@ display: flex;
     	    fill: currentColor;
     	}
 
-        /* bavkdrop */
+        /* backdrop */
 
 .backdrop{
     position: fixed;
@@ -433,16 +433,23 @@ display: flex;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 528px;
+    min-width: 528px;
     min-height: 581px;
     background-color: rgba(255, 255, 255, 1);
    
 }
 .btn-modal{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 30px;
     height: 30px;
     border-radius: 50%;
-    margin: 8px 8px;
+    margin-top: 8px;
+    margin-right: 8px;
+    margin-left: auto;
+    background-color: #FFFFFF;
+    border-color: rgba(0, 0, 0, 0.1);
    
 }
 
