--- a/css/styles.css
+++ b/css/styles.css
@@ -311,6 +311,7 @@ header .logo {
     font-weight: 400;
     font-size: 14px; 
     line-height: 1.14;
+    letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #FFFFFF;
  }
@@ -457,6 +458,7 @@ display: flex;
     transform: translate(-50%, -50%);
     min-width: 528px;
     min-height: 581px;
+    border-radius: 4px;
     background-color: rgba(255, 255, 255, 1);
    
 }
@@ -470,7 +472,7 @@ display: flex;
     margin-top: 8px;
     margin-right: 8px;
     margin-left: auto;
-    background-color: #FFFFFF;
+        background-color: #FFFFFF;
     border-color: rgba(0, 0, 0, 0.1);
    
 }
@@ -622,10 +624,39 @@ footer {
  .project {
      display: flex;
      flex-wrap: wrap;
-
-
  }
 
+ .project-thumb{
+    position: relative;
+    
+ }
+ .project-thumb::before{
+    display: inline-block;
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(33, 150, 243, 0.9);
+    opacity: 0;
+ 
+ }
+ .project-thumb:hover::before,
+ .project-thumb:focus::before{
+    opacity: 1;
+ }
+
+ .project-thumb-text{
+    position: absolute;
+    bottom: 0;
+    margin: 0;
+    color: #FFFFFF;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.55;
+    letter-spacing: 0.03em;
+    padding: 63px 24px;
+    opacity: 0;
+ }
  .project-title {
      font-weight: 700;
      font-size: 18px;
@@ -642,6 +673,7 @@ footer {
  }
 
  .project-item {
+    position: relative;
      background-color: #FFFFFF;
      width: 370px;
      margin-right: 30px;
