--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,8 @@ header .logo {
     font-size: 26px;
     line-height: 1.2;
     text-decoration: none;
-    letter-spacing: 0.03em;    
+    letter-spacing: 0.03em; 
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);   
 }
 
 .logo:hover,
@@ -98,6 +99,7 @@ header .logo {
     letter-spacing: 0.02em;
     padding-top: 32px;
     padding-bottom: 32px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   
 }
 
@@ -113,6 +115,7 @@ header .logo {
     line-height: 1.14;
     text-decoration: none;
     letter-spacing: 0.02em;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -378,6 +381,9 @@ display: flex;
     	    height: 100%;
     	    border-radius: 50%;
     	    color: #AFB1B8;
+            transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+                        background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+           
     	}
     
     	.team-cos-link:hover,
@@ -424,12 +430,14 @@ display: flex;
     	    width: 100%;
     	    height: 100%;
     	    color: #AFB1B8;
+            transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+                        border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     	}
     
-    	.clients-link:hover,
+    	.clients-link:hover, 
     	.clients-link:focus {
     	    color: var(--accent-color);
-            border: 1px solid var(--accent-color);
+            border-color: var(--accent-color);
     	}
     
     
@@ -472,7 +480,7 @@ display: flex;
     margin-top: 8px;
     margin-right: 8px;
     margin-left: auto;
-        background-color: #FFFFFF;
+    background-color: #FFFFFF;
     border-color: rgba(0, 0, 0, 0.1);
    
 }
@@ -497,6 +505,7 @@ footer {
      line-height: 1.2;
      text-decoration: none;
      letter-spacing: 0.03em;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
 
  .address {
@@ -519,6 +528,7 @@ footer {
      font-style: normal;
      text-decoration: none;
      letter-spacing: 0.03em;
+     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
 
  .address-nav .link:hover,
@@ -575,6 +585,7 @@ footer {
      height: 100%;
      border-radius: 50%;
      background-color: rgba(0, 0, 0, 0.25);
+     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
  }
 
  .cos-icon {
@@ -608,6 +619,9 @@ footer {
      line-height: 1.63;
      letter-spacing: 0.03em;
      cursor: pointer;
+     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
 
  .button-nav:hover,
@@ -706,7 +720,9 @@ footer {
      display: block;
 
  }
-
+.shaddow{
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
  .shaddow:hover {
      box-shadow: 1px 4px 6px 0px #00000029,
          0px 4px 4px 0px #0000000F,
