--- a/css/styles.css
+++ b/css/styles.css
@@ -80,6 +80,17 @@ header .logo {
 }
 .menu-nav{
     display: flex;
+}
+
+.menu-nav .link::after{
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    display: block;
+    width: 100%;
+    height: 4px;
+    color: var(--accent-color);
 
 }
  .menu-nav .menu-item{
@@ -90,6 +101,7 @@ header .logo {
  }
 
 .menu-nav .link{
+    position: relative;
     display: block;
     color: var(--title-text-color);
     font-weight: 500;
@@ -454,10 +466,17 @@ display: flex;
     top: 0;
     left: 0;
     background-color: rgba(0, 0, 0, 0.1);
+    opacity: 1;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+                
 }
 .backdrop.is-hidden{
     opacity: 0;
     pointer-events: none;
+    }
+
+.backdrop.is-hidden .modal{
+    transform: translate(-50%, -50%) scale(0);
 }
 .modal{
     position: absolute;
@@ -468,17 +487,18 @@ display: flex;
     min-height: 581px;
     border-radius: 4px;
     background-color: rgba(255, 255, 255, 1);
-   
+    transition: transform 300ms;
 }
 .btn-modal{
+    position: absolute;
+    top: 8px;
+    right: 8px;
     display: flex;
     align-items: center;
     justify-content: center;
     width: 30px;
     height: 30px;
     border-radius: 50%;
-    margin-top: 8px;
-    margin-right: 8px;
     margin-left: auto;
     background-color: #FFFFFF;
     border-color: rgba(0, 0, 0, 0.1);
@@ -642,6 +662,7 @@ footer {
 
  .project-thumb{
     position: relative;
+    overflow: hidden;
     
  }
  .project-thumb::after{
@@ -651,14 +672,19 @@ footer {
     width: 100%;
     height: 100%;
     background-color: rgba(33, 150, 243, 0.9);
-    opacity: 0;
- 
+    overflow: hidden;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   
+
  }
  .project-thumb:hover::after,
  .project-thumb:focus::after{
-    transform: translateY(-294px);
-    opacity: 1;
- }
+    transform: translateY(-100%);
+   
+   }
+  
+   
 
  .project-thumb-text{
     position: absolute;
@@ -670,8 +696,18 @@ footer {
     line-height: 1.55;
     letter-spacing: 0.03em;
     padding: 63px 24px;
-    opacity: 0;
+    overflow: hidden;
+  
+    transform: translateY(100%);
+   
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
+
+ 
+.shaddow:hover .project-thumb::after,
+.shaddow:focus .project-thumb::after{
+    transform: translateY(-100%);
+}
  .project-title {
      font-weight: 700;
      font-size: 18px;
@@ -728,6 +764,7 @@ footer {
      box-shadow: 1px 4px 6px 0px #00000029,
          0px 4px 4px 0px #0000000F,
          0px 1px 1px 0px #0000001F;
+  
  }
 
  .project-item:nth-child(3n) {
