--- a/css/styles.css
+++ b/css/styles.css
@@ -665,30 +665,10 @@ footer {
     overflow: hidden;
     
  }
- .project-thumb::after{
-    display: inline-block;
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(33, 150, 243, 0.9);
-    overflow: hidden;
-    transform: translateY(100%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-   
-
- }
- .project-thumb:hover::after,
- .project-thumb:focus::after{
-    transform: translateY(-100%);
-   
-   }
-  
-   
-
+ 
  .project-thumb-text{
     position: absolute;
-    bottom: 0;
+    top: 0;
     margin: 0;
     color: #FFFFFF;
     font-size: 18px;
@@ -696,18 +676,17 @@ footer {
     line-height: 1.55;
     letter-spacing: 0.03em;
     padding: 63px 24px;
-    overflow: hidden;
-  
-    transform: translateY(100%);
-   
+    background-color: rgba(33, 150, 243, 0.9);
+    transform: translateY(101%);
+    
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
 
- 
-.shaddow:hover .project-thumb::after,
-.shaddow:focus .project-thumb::after{
-    transform: translateY(-100%);
+.shaddow:hover .project-thumb-text{
+    transform: translateY(0);
 }
+
+
  .project-title {
      font-weight: 700;
      font-size: 18px;
