--- a/css/styles.css
+++ b/css/styles.css
@@ -82,11 +82,10 @@ header .logo {
     display: flex;
 }
 
-.menu-nav .link::after{
+/* .menu-nav::after{ */
     content: '';
-    position: absolute;
-    left: 0;
-    bottom: 0;
+ 
+    
     display: block;
     width: 100%;
     height: 4px;
@@ -488,6 +487,7 @@ display: flex;
     border-radius: 4px;
     background-color: rgba(255, 255, 255, 1);
     transition: transform 300ms;
+ 
 }
 .btn-modal{
     position: absolute;
@@ -502,7 +502,7 @@ display: flex;
     margin-left: auto;
     background-color: #FFFFFF;
     border-color: rgba(0, 0, 0, 0.1);
-   
+    cursor: pointer;
 }
 
 
