--- a/css/styles.css
+++ b/css/styles.css
@@ -80,12 +80,14 @@ header .logo {
 }
 .menu-nav{
     display: flex;
+    position: relative;
 }
 
-/* .menu-nav::after{ */
+.menu-item .link::after{
     content: '';
- 
-    
+    position: absolute;
+    left: 0;
+    bottom: 0;
     display: block;
     width: 100%;
     height: 4px;
@@ -100,7 +102,7 @@ header .logo {
  }
 
 .menu-nav .link{
-    position: relative;
+  
     display: block;
     color: var(--title-text-color);
     font-weight: 500;
