--- a/css/styles.css
+++ b/css/styles.css
@@ -83,7 +83,7 @@ header .logo {
     position: relative;
 }
 
-.menu-item .link::after{
+.menu-link::after{
     content: '';
     position: absolute;
     left: 0;
@@ -91,7 +91,7 @@ header .logo {
     display: block;
     width: 100%;
     height: 4px;
-    color: var(--accent-color);
+    background-color: var(--accent-color);
 
 }
  .menu-nav .menu-item{
