--- a/css/styles.css
+++ b/css/styles.css
@@ -83,6 +83,9 @@ header .logo {
     position: relative;
 }
 
+.menu-item{
+    position: relative;
+}
 .menu-link::after{
     content: '';
     position: absolute;
@@ -91,6 +94,7 @@ header .logo {
     display: block;
     width: 100%;
     height: 4px;
+    border-radius: 2px;
     background-color: var(--accent-color);
 
 }
